--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -66,6 +66,7 @@ misc {
 #    animate_mouse_windowdragging = true
     enable_swallow = true
     focus_on_activate = true
+    force_default_wallpaper = 2
 }
 
 #dwindle {
