hypr and fastfetch, starter ags, wallpapers

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -52,9 +52,9 @@ bind = $mainMod, C, killactive
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen
-bind = $mainMod, R, exec, fuzzel --background 1e1e1eff
+bind = $mainMod, R, exec, ags -t launcher
 bind = $mainMod, N, exec, swaync-client -t
-bind = $mainMod, L, exec, swaylock
+bind = $mainMod, L, exec, loginctl lock-session
 bind = $mainMod, S, exec, flameshot gui
 bind = $mainMod, H, exec, copyq toggle
 bind = $mainMod SHIFT, grave, movetoworkspacesilent, special
@@ -64,12 +64,13 @@ bind = Alt_L, Tab, bringactivetotop
 bind = $mainMod, Z, workspace, previous
 bind = $mainMod, period, exec, rofimoji
 bind = ,menu, exec, nwg-dock-hyprland
-bind = $mainMod, Tab, overview:toggle
+#bind = $mainMod, Tab, overview:toggle
+bind = $mainMod, Tab, hyprexpo:expo, toggle
 
 # Audio binds
-binde = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-binde = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
-bind = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
-bind = ,XF86AudioPlay, exec, playerctl play-pause
-bind = ,XF86AudioPrev, exec, playerctl previous
-bind = ,XF86AudioNext, exec, playerctl next
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindl = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindl = ,XF86AudioPlay, exec, playerctl play-pause
+bindl = ,XF86AudioPrev, exec, playerctl previous
+bindl = ,XF86AudioNext, exec, playerctl next
