--- a/.config/hypr/execs.conf
+++ b/.config/hypr/execs.conf
@@ -1,16 +1,17 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-#exec-once = ags
-#exec-once = swww init
+exec-once = /usr/lib/geoclue-2.0/demos/agent & gammastep
+exec-once = ags
+exec-once = hyprpaper
 exec-once = udiskie -t
 exec-once = thunar --daemon
 exec-once = flameshot &
 exec-once = copyq --start-server
 exec-once = nwg-dock-hyprland -r
 #exec-once = nwg-drawer -r
-#exec-once = swayidle -w timeout 900 'swaylock -f -C $HOME/.config/swaylock/config'
+exec-once = hypridle
 exec-once = swaync
 exec-once = swayosd-server
 exec-once = nm-applet
-exec-once = hyprpm reload -n
+exec-once = sleep 1 && hyprpm reload -n
 exec-once = playerctld daemon
