--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,8 +3,9 @@ monitor = ,preferred, auto, auto
 
 env = GDK_BACKEND, wayland, x11,*
 env = QT_QPA_PLATFORM, wayland;xcb
-env = SDL_VIDEODRIVER, wayland
+env = SDL_VIDEODRIVER, wayland,x11
 env = CLUTTER_BACKEND, wayland
+env = ELECTRON_OZONE_PLATFORM_HINT, auto
 
 env = HYPRCURSOR_THEME, Bibata-Modern-Ice-Hypr
 env = HYPRCURSOR_SIZE, 24
@@ -23,8 +24,10 @@ general {
 
 windowrulev2 = opacity 0.9 0.8, class:(kitty)
 windowrulev2 = opacity 0.9 0.8, class:(Code)
+windowrulev2 = opacity 0.9 0.8, class:(code-url-handler)
 
 windowrulev2 = noanim, class:(flameshot)
+windowrulev2 = float, class:(flameshot)
 
 
 decoration {
@@ -47,7 +50,12 @@ decoration {
 animations {
     enabled = true
 
-    
+    bezier = overshot, 0.34, 1.26, 0.64, 1
+    bezier = quart, 0.25, 1, 0.5, 1
+
+    animation = windows, 1, 6, overshot, slide
+    animation = layers, 1, 6, overshot, popin
+    animation = workspaces, 1, 4, quart, slidevert
 }
 
 input {
@@ -66,7 +74,7 @@ misc {
 #    animate_mouse_windowdragging = true
     enable_swallow = true
     focus_on_activate = true
-    force_default_wallpaper = 2
+#    force_default_wallpaper = 2
 }
 
 #dwindle {
@@ -74,18 +82,21 @@ misc {
 #    preserve_split = true
 #}
 
+cursor {
+    no_hardware_cursors = true
+}
+
 source=~/.config/hypr/colors.conf
 source=~/.config/hypr/execs.conf
 source=~/.config/hypr/binds.conf
 source=~/.config/hypr/plugins.conf
 
-#windowrulev2 = idleinhibit focus, class:^(steam_app_.*)$
-
 windowrule = float, title:^(Open File)(.*)$
 windowrule = float, title:^(Open Folder)(.*)$
 windowrule = float, title:^(Save As)(.*)$
-windowrule = float, title:^(Library)(.*)$ 
+windowrule = float, title:^(Library)(.*)$
 windowrulev2 = float, class:^com.github.hluk.copyq$
+windowrule = float, title:^(rofi)(.*)$
 
 windowrule = float, title:^(Heavy Steps)$
 
