--- a/.config/hypr/plugins.conf
+++ b/.config/hypr/plugins.conf
@@ -12,4 +12,8 @@ plugin {
     overview {
         showSpecialWorkspace = true
     }
+
+    hyprexpo {
+        workspace_method = first 1
+    }
 }
