--- a/.config/pikaur.conf
+++ b/.config/pikaur.conf
@@ -35,6 +35,7 @@ displaylastupdated = no
 groupbyrepository = yes
 reversesearchsorting = yes
 warnaboutpackageupdates = 
+warnaboutnondefaultprivilegeescalationtool = yes
 
 [misc]
 pacmanpath = pacman
@@ -47,7 +48,7 @@ datapath = /home/raptorox/.local/share
 
 [network]
 aururl = https://aur.archlinux.org
-newsurl = https://www.archlinux.org/feeds/news/
+newsurl = https://archlinux.org/feeds/news/
 socks5proxy = 
 aurhttpproxy = 
 aurhttpsproxy = 
