ags: add styling, remove powermenu

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -62,8 +62,8 @@ bind = $mainMod, grave, togglespecialworkspace
 bind = Alt_L, Tab, cyclenext
 bind = Alt_L, Tab, bringactivetotop
 bind = $mainMod, Z, workspace, previous
-bind = $mainMod, period, exec, rofimoji
-bind = ,menu, exec, nwg-dock-hyprland
+#bind = $mainMod, period, exec, rofimoji
+#bind = ,menu, exec, nwg-dock-hyprland
 #bind = $mainMod, Tab, overview:toggle
 bind = $mainMod, Tab, hyprexpo:expo, toggle
 
