--- a/.config/hypr/execs.conf
+++ b/.config/hypr/execs.conf
@@ -1,3 +1,5 @@
+# Technically not an exec but who cares
+env = XDG_CURRENT_DESKTOP, Hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = /usr/lib/geoclue-2.0/demos/agent & gammastep
@@ -7,8 +9,6 @@ exec-once = udiskie -t
 exec-once = thunar --daemon
 exec-once = flameshot &
 exec-once = copyq --start-server
-exec-once = nwg-dock-hyprland -r
-#exec-once = nwg-drawer -r
 exec-once = hypridle
 exec-once = swaync
 exec-once = swayosd-server
