--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1234,7 +1234,7 @@ font_size 12.0
 #: kitty will cycle through various known editors (vim, emacs, etc.)
 #: and take the first one that exists on your system.
 
-# close_on_child_death no
+close_on_child_death yes
 
 #: Close the window when the child process (shell) exits. With the
 #: default value no, the terminal will remain open when the child
