hypr: add uwsm; uwsm: add env

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -47,16 +47,20 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Exec binds
-bind = $mainMod, Q, exec, kitty
+$uwsm = uwsm app --
+
+bind = $mainMod, Q, exec, $uwsm kitty
 bind = $mainMod, C, killactive
-bind = $mainMod, E, exec, thunar
+bind = $mainMod, E, exec, $uwsm thunar
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, F, fullscreen
-bind = $mainMod, R, exec, ags -t launcher
-bind = $mainMod, N, exec, swaync-client -t
+bind = $mainMod, F, fullscreen, 0 # actual fullscreen
+bind = $mainMod SHIFT, F, fullscreen, 1 # maximize
+#bind = $mainMod, R, exec, ags -t launcher
+bind = $mainMod, R, exec, $uwsm fuzzel
+bind = $mainMod, N, exec, $uwsm swaync-client -t
 bind = $mainMod, L, exec, loginctl lock-session
-bind = $mainMod, S, exec, flameshot gui
-bind = $mainMod, H, exec, copyq toggle
+bind = $mainMod, S, exec, $uwsm flameshot gui
+bind = $mainMod, H, exec, $uwsm kitty --class clipse "clipse"
 bind = $mainMod SHIFT, grave, movetoworkspacesilent, special
 bind = $mainMod, grave, togglespecialworkspace
 bind = Alt_L, Tab, cyclenext
@@ -65,12 +69,12 @@ bind = $mainMod, Z, workspace, previous
 #bind = $mainMod, period, exec, rofimoji
 #bind = ,menu, exec, nwg-dock-hyprland
 #bind = $mainMod, Tab, overview:toggle
-bind = $mainMod, Tab, hyprexpo:expo, toggle
+#bind = $mainMod, Tab, hyprexpo:expo, toggle
 
 # Audio binds
-bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
-bindl = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
-bindl = ,XF86AudioPlay, exec, playerctl play-pause
-bindl = ,XF86AudioPrev, exec, playerctl previous
-bindl = ,XF86AudioNext, exec, playerctl next
+bindel = ,XF86AudioRaiseVolume, exec, $uwsm swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, $uwsm swayosd-client --output-volume lower
+bindl = ,XF86AudioMute, exec, $uwsm swayosd-client --output-volume mute-toggle
+bindl = ,XF86AudioPlay, exec, $uwsm playerctl play-pause
+bindl = ,XF86AudioPrev, exec, $uwsm playerctl previous
+bindl = ,XF86AudioNext, exec, $uwsm playerctl next
