--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,24 +1,16 @@
 monitor = ,preferred, auto, auto
 
 
-env = GDK_BACKEND, wayland, x11,*
-env = QT_QPA_PLATFORM, wayland;xcb
-env = SDL_VIDEODRIVER, wayland,x11
-env = CLUTTER_BACKEND, wayland
-env = ELECTRON_OZONE_PLATFORM_HINT, auto
-
-env = HYPRCURSOR_THEME, Bibata-Modern-Ice-Hypr
-env = HYPRCURSOR_SIZE, 24
-env = XCURSOR_THEME, Bibata-Modern-Ice
-env = XCURSOR_SIZE, 24
-
-
 general {
     border_size = 0
     gaps_in = 3
     gaps_out = 10
 
     layout = dwindle
+
+    snap {
+        enabled = true
+    }
 }
 
 
@@ -32,10 +24,13 @@ windowrulev2 = float, class:(flameshot)
 
 decoration {
     rounding = 5
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 
     blur {
         enabled = true
@@ -83,10 +78,6 @@ misc {
 #    preserve_split = true
 #}
 
-cursor {
-    no_hardware_cursors = true
-}
-
 source=~/.config/hypr/colors.conf
 source=~/.config/hypr/execs.conf
 source=~/.config/hypr/binds.conf
@@ -96,8 +87,9 @@ windowrule = float, title:^(Open File)(.*)$
 windowrule = float, title:^(Open Folder)(.*)$
 windowrule = float, title:^(Save As)(.*)$
 windowrule = float, title:^(Library)(.*)$
-windowrulev2 = float, class:^com.github.hluk.copyq$
-windowrule = float, title:^(rofi)(.*)$
+
+windowrulev2 = float, class:(clipse)
+windowrulev2 = size 622 652, class:(clipse)
 
 windowrule = float, title:^(Heavy Steps)$
 
