--- a/.config/hypr/execs.conf
+++ b/.config/hypr/execs.conf
@@ -1,17 +1,19 @@
-# Technically not an exec but who cares
-env = XDG_CURRENT_DESKTOP, Hyprland
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+$uwsm = uwsm app --
+
+#exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = /usr/lib/geoclue-2.0/demos/agent & gammastep
-exec-once = ags
-exec-once = hyprpaper
-exec-once = udiskie -t
-exec-once = thunar --daemon
-exec-once = flameshot &
-exec-once = copyq --start-server
-exec-once = hypridle
-exec-once = swaync
-exec-once = swayosd-server
-exec-once = nm-applet
+#exec-once = keepassxc
+exec-once = $uwsm ags
+#exec-once = $uwsm hyprpaper
+exec-once = $uwsm udiskie -t
+exec-once = $uwsm thunar --daemon
+exec-once = $uwsm flameshot &
+exec-once = $uwsm clipse -listen
+#exec-once = $uwsm hypridle
+exec-once = $uwsm swaync
+exec-once = $uwsm ntfy sub -c $HOME/.config/ntfy/client.yml -C
+exec-once = $uwsm swayosd-server
+exec-once = $uwsm nm-applet
 exec-once = sleep 1 && hyprpm reload -n
-exec-once = playerctld daemon
+exec-once = $uwsm playerctld daemon
