--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,7 +1,7 @@
 general {
     lock_cmd = pidof hyprlock || hyprlock
-    before_speel_cmd = loginctl lock-session
-    after_sleep_cmd = hyprctl dispatch dpms on
+    before_sleep_cmd = loginctl lock-session
+    after_sleep_cmd = sleep 3; hyprctl dispatch dpms on
 }
 
 listener {
