fish: add lms; hypr: update binds for 75% kb

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -72,9 +72,17 @@ bind = $mainMod, Z, workspace, previous
 #bind = $mainMod, Tab, hyprexpo:expo, toggle
 
 # Audio binds
-bindel = ,XF86AudioRaiseVolume, exec, $uwsm swayosd-client --output-volume raise
-bindel = ,XF86AudioLowerVolume, exec, $uwsm swayosd-client --output-volume lower
-bindl = ,XF86AudioMute, exec, $uwsm swayosd-client --output-volume mute-toggle
-bindl = ,XF86AudioPlay, exec, $uwsm playerctl play-pause
-bindl = ,XF86AudioPrev, exec, $uwsm playerctl previous
-bindl = ,XF86AudioNext, exec, $uwsm playerctl next
+#bindel = ,XF86AudioRaiseVolume, exec, $uwsm swayosd-client --output-volume raise
+#bindel = ,XF86AudioLowerVolume, exec, $uwsm swayosd-client --output-volume lower
+#bindl = ,XF86AudioMute, exec, $uwsm swayosd-client --output-volume mute-toggle
+#bindl = ,XF86AudioPlay, exec, $uwsm playerctl play-pause
+#bindl = ,XF86AudioPrev, exec, $uwsm playerctl previous
+#bindl = ,XF86AudioNext, exec, $uwsm playerctl next
+
+# Audio binds but also working on 75%
+bindel = $mainMod SHIFT, up, exec, $uwsm swayosd-client --output-volume raise
+bindel = $mainMod SHIFT, down, exec, $uwsm swayosd-client --output-volume lower
+bindl = $mainMod SHIFT, M, exec, $uwsm swayosd-client --output-volume mute-toggle
+bindl = $mainMod SHIFT, N, exec, $uwsm playerctl play-pause
+bindl = $mainMod SHIFT, left, exec, $uwsm playerctl previous
+bindl = $mainMod SHIFT, right, exec, $uwsm playerctl next
