--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -92,6 +92,7 @@ windowrulev2 = float, class:(clipse)
 windowrulev2 = size 622 652, class:(clipse)
 
 windowrule = float, title:^(Heavy Steps)$
+windowrulev2 = float, class:^(game\.py)$
 
 layerrule = blur, gtk-layer-shell
 layerrule = ignorezero, gtk-layer-shell
