--- a/.config/hypr/plugins.conf
+++ b/.config/hypr/plugins.conf
@@ -4,9 +4,9 @@ plugin {
         bar_color = rgba(1a1b26cc)
         bar_height = 24
 
-        hyprbars-button = rgb(ff4040), 16, , hyprctl dispatch killactive
-        hyprbars-button = rgb(eeee11), 16, , hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(40ff40), 16, , hyprctl dispatch togglefloating
+        hyprbars-button = rgb(ff4040), 24, , hyprctl dispatch killactive
+        hyprbars-button = rgb(eeee11), 24, , hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(40ff40), 24, , hyprctl dispatch togglefloating
     }
 
     overview {
