--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -72,17 +72,21 @@ bind = $mainMod, Z, workspace, previous
 #bind = $mainMod, Tab, hyprexpo:expo, toggle
 
 # Audio binds
-#bindel = ,XF86AudioRaiseVolume, exec, $uwsm swayosd-client --output-volume raise
-#bindel = ,XF86AudioLowerVolume, exec, $uwsm swayosd-client --output-volume lower
-#bindl = ,XF86AudioMute, exec, $uwsm swayosd-client --output-volume mute-toggle
-#bindl = ,XF86AudioPlay, exec, $uwsm playerctl play-pause
-#bindl = ,XF86AudioPrev, exec, $uwsm playerctl previous
-#bindl = ,XF86AudioNext, exec, $uwsm playerctl next
+bindel = ,XF86AudioRaiseVolume, exec, $uwsm swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, $uwsm swayosd-client --output-volume lower
+bindl = ,XF86AudioMute, exec, $uwsm swayosd-client --output-volume mute-toggle
+bindl = ,XF86AudioPlay, exec, $uwsm playerctl play-pause
+bindl = ,XF86AudioPrev, exec, $uwsm playerctl previous
+bindl = ,XF86AudioNext, exec, $uwsm playerctl next
+
+# Zoom
+binde = $mainMod, equal, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '.float * 1.1')
+binde = $mainMod, minus, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '(.float * 0.9) | if . < 1 then 1 else . end')
 
 # Audio binds but also working on 75%
-bindel = $mainMod SHIFT, up, exec, $uwsm swayosd-client --output-volume raise
-bindel = $mainMod SHIFT, down, exec, $uwsm swayosd-client --output-volume lower
-bindl = $mainMod SHIFT, M, exec, $uwsm swayosd-client --output-volume mute-toggle
-bindl = $mainMod SHIFT, N, exec, $uwsm playerctl play-pause
-bindl = $mainMod SHIFT, left, exec, $uwsm playerctl previous
-bindl = $mainMod SHIFT, right, exec, $uwsm playerctl next
+#bindel = $mainMod SHIFT, up, exec, $uwsm swayosd-client --output-volume raise
+#bindel = $mainMod SHIFT, down, exec, $uwsm swayosd-client --output-volume lower
+#bindl = $mainMod SHIFT, M, exec, $uwsm swayosd-client --output-volume mute-toggle
+#bindl = $mainMod SHIFT, N, exec, $uwsm playerctl play-pause
+#bindl = $mainMod SHIFT, left, exec, $uwsm playerctl previous
+#bindl = $mainMod SHIFT, right, exec, $uwsm playerctl next
