--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,18 +1,5 @@
-monitor = ,preferred, auto, auto
-
-
-general {
-    border_size = 0
-    gaps_in = 3
-    gaps_out = 10
-
-    layout = dwindle
-
-    snap {
-        enabled = true
-    }
-}
-
+monitor = DVI-D-1,preferred, auto, auto
+monitor = HDMI-A-1, disable
 
 windowrulev2 = opacity 0.9 0.8, class:(kitty)
 windowrulev2 = opacity 0.9 0.8, class:(Code)
@@ -21,6 +8,9 @@ windowrulev2 = opacity 0.9 0.8, class:(code-url-handler)
 windowrulev2 = noanim, class:(flameshot)
 windowrulev2 = float, class:(flameshot)
 
+layerrule = blur, swaync-control-center
+layerrule = ignorezero, swaync-control-center
+layerrule = animation slide right, swaync-control-center
 
 decoration {
     rounding = 5
@@ -45,11 +35,11 @@ decoration {
 animations {
     enabled = true
 
-    bezier = overshot, 0.34, 1.26, 0.64, 1
+    bezier = overshot, 0.34, 1.20, 0.64, 1
     bezier = quart, 0.25, 1, 0.5, 1
 
     animation = windows, 1, 6, overshot, slide
-    animation = layers, 1, 6, overshot, popin
+    animation = layers, 1, 6, overshot, popin 60%
     animation = workspaces, 1, 4, quart, slidevert
 }
 
@@ -78,6 +68,7 @@ misc {
 #    preserve_split = true
 #}
 
+source=~/.config/hypr/hyprland.conf.d/*.conf
 source=~/.config/hypr/colors.conf
 source=~/.config/hypr/execs.conf
 source=~/.config/hypr/binds.conf
@@ -96,5 +87,13 @@ windowrulev2 = float, class:^(game\.py)$
 
 layerrule = blur, gtk-layer-shell
 layerrule = ignorezero, gtk-layer-shell
-layerrule = blur, ags
-layerrule = ignorezero, ags
+layerrule = blur, qs
+layerrule = ignorezero, qs
+
+# Smart gaps
+#workspace = w[tv1], gapsout:0, gapsin:0
+#workspace = f[1], gapsout:0, gapsin:0
+#windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+#windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+#windowrule = bordersize 0, floating:0, onworkspace:f[1]
+#windowrule = rounding 0, floating:0, onworkspace:f[1]
