--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,6 +1,12 @@
 general {
+  #disable_loading_bar = false
+    hide_cursor = false
     grace = 5
     ignore_empty_input = true
+    immediate_render = false
+    text_trim = true
+    fractional_scaling = 2
+    screencopy_mode = 0
 }
 
 background {
