--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Wallpapers/city.png
-wallpaper = , ~/Wallpapers/city.png
+preload = ~/Wallpapers/cube.png
+wallpaper = , ~/Wallpapers/cube.png
