--- a/.config/hypr/plugins.conf
+++ b/.config/hypr/plugins.conf
@@ -4,9 +4,9 @@ plugin {
         bar_color = rgba(1a1b26cc)
         bar_height = 24
 
-        hyprbars-button = rgb(ff4040), 24, , hyprctl dispatch killactive
-        hyprbars-button = rgb(eeee11), 24, , hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(40ff40), 24, , hyprctl dispatch togglefloating
+        hyprbars-button = rgba(ff404000), 24, , hyprctl dispatch killactive, rgb(ffffff)
+        hyprbars-button = rgba(eeee1100), 24, , hyprctl dispatch fullscreen 1, rgb(ffffff)
+        hyprbars-button = rgba(40ff4000), 24, , hyprctl dispatch togglefloating, rgb(ffffff)
     }
 
     overview {
