--- a/.config/hypr/execs.conf
+++ b/.config/hypr/execs.conf
@@ -4,7 +4,7 @@ $uwsm = uwsm app --
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = /usr/lib/geoclue-2.0/demos/agent & gammastep
 #exec-once = keepassxc
-exec-once = $uwsm ags
+exec-once = $uwsm qs
 #exec-once = $uwsm hyprpaper
 exec-once = $uwsm udiskie -t
 exec-once = $uwsm thunar --daemon
@@ -12,7 +12,7 @@ exec-once = $uwsm flameshot &
 exec-once = $uwsm clipse -listen
 #exec-once = $uwsm hypridle
 exec-once = $uwsm swaync
-exec-once = $uwsm ntfy sub -c $HOME/.config/ntfy/client.yml -C
+#exec-once = $uwsm ntfy sub -c $HOME/.config/ntfy/client.yml -C
 exec-once = $uwsm swayosd-server
 exec-once = $uwsm nm-applet
 exec-once = sleep 1 && hyprpm reload -n
