--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -68,7 +68,7 @@ bind = Alt_L, Tab, bringactivetotop
 bind = $mainMod, Z, workspace, previous
 #bind = $mainMod, period, exec, rofimoji
 #bind = ,menu, exec, nwg-dock-hyprland
-#bind = $mainMod, Tab, overview:toggle
+bind = $mainMod, Tab, overview:toggle
 #bind = $mainMod, Tab, hyprexpo:expo, toggle
 
 # Audio binds
