--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
-monitor = DVI-D-1,preferred, auto, auto
-monitor = HDMI-A-1, disable
+monitor = DVI-D-1, preferred, auto, auto
+monitor = HDMI-A-1, preferred, auto, auto
 
 windowrulev2 = opacity 0.9 0.8, class:(kitty)
 windowrulev2 = opacity 0.9 0.8, class:(Code)
